# ekadanta-co-servant

./: .dockerignore  .gitignore  .gitlab-ci.yml  ChangeLog.md  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yml  ekadanta-co.cabal  package.yaml  stack.yaml
.github/workflows/: build-push-docker.yml  haskell.yml
app/: Indexer.hs  Main.hs
data_files/: async_py.json  es_ekadanta_content_mapping.json
designs/: ekadanta (copy).sketch
old_posts/: 2000-11-29_All_these_.html  2000-11-29_Good_Citiz.html  2000-11-29_Killing_Of.html  2000-11-29_Patchwork_.html  2000-11-29_Post_Topic.html  2007-12-17_Border_Wall_Ruminations.html  2007-12-17_Carbon_Gui.html  2007-12-17_Die_Schrei.html  2007-12-17_Just_like_.html  2007-12-17_Keith_Jarr.html  2007-12-17_Shipwrecks.html  2007-12-30_Jellyfish_.html  2008-01-02_Here's_Som.html  2008-01-03_Plain_Old_.html  2008-01-05_Take_Heart.html  2008-01-15_Hosting_Me.html  2008-03-05_My_continu.html  2008-03-23_Here's_a_w.html  2008-03-30_Free_Thing.html  2008-04-03_Mnemonics2.html  2008-04-15_Precious_P.html  2008-04-17_I_Apologiz.html  2008-04-25_Here's_Som.html  2008-10-22_Anyone_els.html  2008-10-22_Finally_so.html  2008-10-25_A_Quick_an.html  2008-10-27_Conscienti.html  2008-11-16_What's_the.html  2009-02-01_Watching_t.html  2009-02-08_It's_True_.html  2009-02-14_A_Trip_Upm.html  2009-02-15_Day_3:_The.html  2009-02-16_The_Other_.html  2009-02-19_Hulu_Ends_.html  2009-02-22_Why_Does_t.html  2009-02-28_Myth-Makin.html  2009-03-02_I_Didn't_S.html  2009-03-09_The_Dialec.html  2009-03-16_The_Ideolo.html  2009-03-23_What_the_B.html  (+48 more)
old_posts/drafts/: 2007-12-31_Ocean_Imit.html  2008-01-21_Buying_fro.html  2008-02-14_Reams_and_.html  2008-03-05_Responding.html  2008-03-06_Losing2008.html  2008-04-08_Blog_that_.html
src/: Site.hs
src/Site/: AdminResources.hs  Config.hs  Exceptions.hs  Loggers.hs  PublicResources.hs  Search.hs  Types.hs
src/Site/Html/: Admin.hs  Base.hs  Contact.hs  ContentDetail.hs  ContentList.hs  Home.hs
static/css/: styles.css  styles.min.css
templates/: admin_edit_detail.html  admin_edit_list.html  blog_list.html  blog_post.html  contact.html  home.html  index.html
test/: PublicResourcesSpec.hs  Spec.hs
test/Site/: PublicResourcesSpec.hs
