name:           ekadanta-co
version:        1.2.0.0
description:    Please see the README on Gitlab at <https://gitlab.com/erewok/ekadanta-co-servant/-/blob/master/README.md>
homepage:       https://gitlab.com/erewok/ekadanta-co-servant/-/blob/master/README.md
bug-reports:    https://gitlab.com/erewok/ekadanta-co-servant/-/issues
author:         Erik Aker
maintainer:     eraker@gmail.com
copyright:      2020 Erik aker
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 2.0
extra-source-files:
    ChangeLog.md
    README.md
data-files:
    data_files/es_ekadanta_content_mapping.json

source-repository head
  type: git
  location: https://github.com/erewok/ekadanta-co-servant

library
  exposed-modules:
      Site
      Site.AdminResources
      Site.Config
      Site.Exceptions
      Site.Html.Admin
      Site.Html.Base
      Site.Html.Contact
      Site.Html.ContentDetail
      Site.Html.ContentList
      Site.Html.Home
      Site.Loggers
      Site.PublicResources
      Site.Search
      Site.Types
  other-modules:
      Paths_ekadanta_co
  hs-source-dirs:
      src
  ghc-options: -Wall
  default-extensions: DataKinds DeriveGeneric GADTs InstanceSigs LambdaCase MultiWayIf NoImplicitPrelude OverloadedStrings RecordWildCards ScopedTypeVariables TypeOperators UnicodeSyntax
  build-depends:
      aeson
    , base
    , bifunctors
    , blaze-html
    , blaze-markup
    , bytestring
    , cmark
    , cmark-gfm
    , data-default
    , envy
    , fast-logger
    , http-api-data
    , http-client
    , http-types
    , lens
    , lens-aeson
    , mime-mail
    , rio
    , servant
    , servant-auth-server
    , servant-blaze
    , servant-checked-exceptions
    , servant-client
    , servant-server
    , smtp-mail
    , text
    , time
    , uuid
    , wai
    , wai-extra
    , world-peace
  default-language: Haskell2010


executable ekadanta-co
  main-is: Main.hs
  other-modules:
      Paths_ekadanta_co
  hs-source-dirs:
      app
  default-extensions: DataKinds DeriveGeneric GADTs InstanceSigs LambdaCase MultiWayIf NoImplicitPrelude OverloadedStrings RecordWildCards ScopedTypeVariables TypeOperators UnicodeSyntax
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , bifunctors
    , blaze-html
    , blaze-markup
    , bytestring
    , cmark
    , cmark-gfm
    , data-default
    , ekadanta-co
    , envy
    , fast-logger
    , http-api-data
    , http-client
    , http-types
    , lens
    , lens-aeson
    , mime-mail
    , rio
    , servant
    , servant-auth-server
    , servant-blaze
    , servant-checked-exceptions
    , servant-client
    , servant-server
    , smtp-mail
    , text
    , time
    , uuid
    , wai
    , wai-extra
    , warp
    , world-peace
  default-language: Haskell2010


test-suite ekadanta-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Site.PublicResourcesSpec
  hs-source-dirs:
      test
  default-extensions: DataKinds DeriveGeneric GADTs InstanceSigs LambdaCase MultiWayIf NoImplicitPrelude OverloadedStrings RecordWildCards ScopedTypeVariables TypeOperators UnicodeSyntax
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , aeson
    , base
    , deepseq
    , ekadanta-co
    , envy
    , fast-logger
    , hspec
    , hspec-discover
    , hspec-wai
    , hspec-wai-json
    , http-client
    , http-types
    , lens
    , lens-aeson
    , rio
    , servant
    , servant-blaze
    , servant-client
    , servant-server
    , text
    , uuid
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010


executable ekadanta-indexer
  main-is: Indexer.hs
  other-modules:
      Paths_ekadanta_co
  hs-source-dirs:
      app
  default-extensions: DataKinds DeriveGeneric GADTs InstanceSigs LambdaCase MultiWayIf NoImplicitPrelude OverloadedStrings RecordWildCards ScopedTypeVariables TypeOperators UnicodeSyntax
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.13 && <5
    , bifunctors
    , bytestring
    , data-default
    , directory
    , ekadanta-co
    , envy
    , fast-logger
    , rio
    , servant-client
    , text
  default-language: Haskell2010